<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/labels">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.bioregproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.bioregproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_nav_gallery_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.bioregproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.bioregproject.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.bioregproject.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.bioregproject.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/signIn"
        android:name="com.example.bioregproject.ui.Authentication.SignIn"
        android:label="sign_in_fragment"
        tools:layout="@layout/sign_in_fragment" >
        <action
            android:id="@+id/action_signIn_to_accountBindiner"
            app:destination="@id/accountBindiner"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popUpTo="@+id/accountBindiner" />
    </fragment>
    <fragment
        android:id="@+id/accountBindiner"
        android:name="com.example.bioregproject.ui.Authentication.AccountBinder"
        android:label="account_bindiner_fragment"
        tools:layout="@layout/account_bindiner_fragment" >
        <action
            android:id="@+id/action_accountBindiner_to_mainMenu"
            app:destination="@id/mainMenu"
            app:enterAnim="@anim/nav_default_enter_anim" />
    </fragment>
    <fragment
        android:id="@+id/mainMenu"
        android:name="com.example.bioregproject.ui.menu.mainMenu"
        android:label="main_menu_fragment"
        tools:layout="@layout/main_menu_fragment" >
        <action
            android:id="@+id/action_mainMenu_to_products"
            app:destination="@id/products"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/refrigerato_temperature"
        android:name="com.example.bioregproject.ui.Temperature.refrigerato_temperature"
        android:label="refrigerato_temperature_fragment"
        tools:layout="@layout/refrigerato_temperature_fragment" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.bioregproject.ui.Settings.SettingsFragment"
        android:label="settings_fragment"
        tools:layout="@layout/settings_fragment" />
    <fragment
        android:id="@+id/cleaning"
        android:name="com.example.bioregproject.ui.Cleaning.Cleaning"
        android:label="cleaning_fragment"
        tools:layout="@layout/cleaning_fragment" />
    <fragment
        android:id="@+id/documents"
        android:name="com.example.bioregproject.ui.Documents.Documents"
        android:label="documents_fragment"
        tools:layout="@layout/documents_fragment" />
    <fragment
        android:id="@+id/oliControl"
        android:name="com.example.bioregproject.ui.OilControl.OliControl"
        android:label="oli_control_fragment"
        tools:layout="@layout/oli_control_fragment" />
    <fragment
        android:id="@+id/labels"
        android:name="com.example.bioregproject.ui.Printing.Labels"
        android:label="labels_fragment"
        tools:layout="@layout/labels_fragment" />
    <fragment
        android:id="@+id/products"
        android:name="com.example.bioregproject.ui.Traceability.Products"
        android:label="products_fragment"
        tools:layout="@layout/products_fragment" />
    <fragment
        android:id="@+id/storageControl"
        android:name="com.example.bioregproject.ui.Storage.StorageControl"
        android:label="storage_control_fragment"
        tools:layout="@layout/storage_control_fragment" />
    <fragment
        android:id="@+id/taskPlan"
        android:name="com.example.bioregproject.ui.Planification.taskPlan"
        android:label="task_plan_fragment"
        tools:layout="@layout/task_plan_fragment" >
        <action
            android:id="@+id/action_taskPlan_to_taskPlanManage"
            app:destination="@id/taskPlanManage"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/hisotrys"
        android:name="com.example.bioregproject.ui.History.Hisotry"
        android:label="hisotry_fragment"
        tools:layout="@layout/hisotry_fragment" />
    <fragment
        android:id="@+id/oilSettingFragment"
        android:name="com.example.bioregproject.ui.Settings.OilSetting.OilSettingFragment"
        android:label="oil_setting_fragment"
        tools:layout="@layout/oil_setting_fragment" />
    <fragment
        android:id="@+id/taskPlanManage"
        android:name="com.example.bioregproject.ui.Planification.taskPlanManage"
        android:label="task_plan_manage_fragment"
        tools:layout="@layout/task_plan_manage_fragment" >
        <action
            android:id="@+id/action_taskPlanManage_to_taskPlan"
            app:destination="@id/taskPlan"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

</navigation>